--- a/_posts/BlockChain/블록체인_특강/2022-07-21-4일차-(ERC20)스마트컨트랙트 토큰 발행, 전송 & 지갑 만들기.md
+++ b/_posts/BlockChain/블록체인_특강/2022-07-21-4일차-(ERC20)스마트컨트랙트 토큰 발행, 전송 & 지갑 만들기.md
@@ -55,7 +55,7 @@ typora-root-url: ../../..
 * `Array`는 **list와 유사**
 * `Unit, Address`가 생소한 데이터 타입
 
-![image-20220721100648190](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100648190.png)
+![image-20220721100648190](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721100648190.png)
 
 <br>
 
@@ -63,7 +63,7 @@ typora-root-url: ../../..
 
 * `view`를 많이 사용
 
-![image-20220721100820531](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100820531.png)
+![image-20220721100820531](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721100820531.png)
 
 <br>
 
@@ -71,17 +71,17 @@ typora-root-url: ../../..
 
 **최종 함수 호출 형태**
 
-![image-20220721100903382](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100903382.png)
+![image-20220721100903382](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721100903382.png)
 
-![image-20220721100949155](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100949155.png)
+![image-20220721100949155](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721100949155.png)
 
 <br>
 
 ### 생성자
 
-![image-20220721101101858](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101101858.png)
+![image-20220721101101858](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721101101858.png)
 
-![image-20220721101215258](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101215258.png)
+![image-20220721101215258](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721101215258.png)
 
 <br>
 
@@ -89,7 +89,7 @@ typora-root-url: ../../..
 
 * **생성자**랑 같이 실행된다고 보면 된다.
 
-![image-20220721101311341](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101311341.png)
+![image-20220721101311341](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721101311341.png)
 
 <br>
 
@@ -98,13 +98,13 @@ typora-root-url: ../../..
 * `예외처리 예시`는 위의 `require(msg.sender == owner);`
 * `이벤트 예시`는 `function { ~~~ event (log1, "테스트") }`
 
-![image-20220721101413693](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101413693.png)
+![image-20220721101413693](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721101413693.png)
 
 <br>
 
 ### address 타입의 자료형
 
-![image-20220721101624359](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101624359.png)
+![image-20220721101624359](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721101624359.png)
 
 <br>
 
@@ -126,7 +126,7 @@ typora-root-url: ../../..
 
 * [Remix](https://remix-project.org/) 에서 `start coding` 클릭 및 ` solidity` 스마트 컨트랙트 언어 사용할것이다.
 
-![image-20220721110945096](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721110945096.png)
+![image-20220721110945096](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721110945096.png)
 
 <br>
 
@@ -137,7 +137,7 @@ typora-root-url: ../../..
 * `contract` 에는 파일명과 동일한 이름으로 생성한다.
 * 코드 내용은 자바의 `getter, setter` 함수 만드는것과 동일하다.
 
-![image-20220721112632148](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721112632148.png)
+![image-20220721112632148](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721112632148.png)
 
 <br>
 
@@ -152,7 +152,7 @@ typora-root-url: ../../..
     0x358AA13c52544ECCEF6B0ADD0f801012ADAD5eE3
   * 그리고 여기보면 함수만든게 버튼처럼 사용할 수 있게 되어있다.
 
-![image-20220721113059425](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721113059425.png)
+![image-20220721113059425](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721113059425.png)
 
 <br><br>
 
@@ -163,19 +163,19 @@ typora-root-url: ../../..
 * Deploy하면 트랜잭션 create가 되고, 함수 버튼 클릭해서 요청하면 call로 잘 넘어간다.
 * 전부 가스 요금이 붙는데(수수료같이), get Int 같은 함수는 붙지않으며 트랜잭션 횟수로도 추가되지 않는다.
 
-![image-20220721120010687](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721120010687.png)
+![image-20220721120010687](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721120010687.png)
 
 <br>
 
 **Deploy 이후 call을 해보겠다.(postString 클릭)**
 
-![image-20220721120404615](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721120404615.png)
+![image-20220721120404615](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721120404615.png)
 
 <br>
 
 **TXDATA가 우리가 보낸 값 ganache 이라고 보면 된다.**
 
-![image-20220721120307459](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721120307459.png)
+![image-20220721120307459](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721120307459.png)
 
 <br><br>
 
@@ -186,21 +186,21 @@ typora-root-url: ../../..
 * 우선 besu를 node4개다 실행해준다.
 * 그후 metamask와 연동할 주소를 복사해서 ENVIRONMENT와 ACCOUNT를 적절히 작성한다.
 
-![image-20220721121711760](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721121711760.png)
+![image-20220721121711760](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721121711760.png)
 
-![image-20220721121723907](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721121723907.png)
+![image-20220721121723907](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721121723907.png)
 
 <br>
 
 **Deploy로 Creation한 결과 지갑을 확인해보면 가스(수수료)가 빠진걸 알 수 있다.**
 
-![image-20220721122041696](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721122041696.png)
+![image-20220721122041696](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721122041696.png)
 
 <br>
 
 **postInt 버튼을 클릭했을시 수수료가 빠지는 모습도 볼 수 있다.**
 
-![image-20220721122059648](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721122059648.png)
+![image-20220721122059648](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721122059648.png)
 
 <br>
 
@@ -226,7 +226,7 @@ ganache에서 TXDATA로 보여지던 부분처럼 말이다.**
   * 그러나, 코드작성하기 매우 힘드니까 깃허브에 제공하는 코드를 사용하겠다.
   * [깃허브](https://github.com/OpenZeppelin) 에서 아래 코드들만 가져와 remix에 작성
 
-![image-20220721141957714](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721141957714.png)
+![image-20220721141957714](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721141957714.png)
 
 **추가로 ERC20.sol과 IERC20Metadata.sol 의 윗부분 코드인 import에 경로를 ./으로 수정(동일한곳에 파일 생성했음)**
 
@@ -257,7 +257,7 @@ function decimals() public view virtual override returns (uint8) {
 
 * **아래처럼 하면 1000 st토큰을 얻을 수 있다.**
 
-![image-20220721144445731](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721144445731.png)
+![image-20220721144445731](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721144445731.png)
 
 <br>
 
@@ -267,15 +267,15 @@ function decimals() public view virtual override returns (uint8) {
 
 **Ganache**
 
-![image-20220721144945188](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721144945188.png)
+![image-20220721144945188](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721144945188.png)
 
 <br>
 
 **Remix**
 
-![image-20220721145044443](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145044443.png)
+![image-20220721145044443](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721145044443.png)
 
-![image-20220721145124175](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145124175.png)
+![image-20220721145124175](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721145124175.png)
 
 <br>
 
@@ -284,7 +284,7 @@ function decimals() public view virtual override returns (uint8) {
 * 네트워크 Ganache로 잘 맞추고, 계정은 Ganache의 private key로 가져오면 끝
 * 내역보면 변경내역이나오며, 토큰을 보고싶으면 토큰가져오기에서 Remix의 Deployed Contracts에 있는 주소 복사해서 가져오면 생성된 토큰 확인도 가능
 
-![image-20220721145223074](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145223074.png)
+![image-20220721145223074](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721145223074.png)
 
 <br>
 
@@ -296,7 +296,7 @@ function decimals() public view virtual override returns (uint8) {
 
 **Remix**
 
-![image-20220721145609580](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145609580.png)
+![image-20220721145609580](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721145609580.png)
 
 <br>
 
@@ -304,7 +304,7 @@ function decimals() public view virtual override returns (uint8) {
 
 * **자산 들어가보면 토큰 발행된 내역 나옴**
 
-![image-20220721145633932](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145633932.png)
+![image-20220721145633932](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721145633932.png)
 
 <br>
 
@@ -312,9 +312,9 @@ function decimals() public view virtual override returns (uint8) {
 
 * increaseAllowance
 
-![image-20220721145830394](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145830394.png)
+![image-20220721145830394](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721145830394.png)
 
-![image-20220721150033768](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150033768.png)
+![image-20220721150033768](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721150033768.png)
 
 <br>
 
@@ -323,15 +323,15 @@ function decimals() public view virtual override returns (uint8) {
 
 * **이 주소는 deploy된 스마트 컨트랙트의 주소이다**
 
-![image-20220721150331863](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150331863.png)
+![image-20220721150331863](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721150331863.png)
 
-![image-20220721150723852](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150723852.png)
+![image-20220721150723852](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721150723852.png)
 
 <br>
 
 **JW 새로 생성한 토큰 전송 또한 문제없다.**
 
-![image-20220721150920462](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150920462.png)
+![image-20220721150920462](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721150920462.png)
 
 <br><br>
 
@@ -421,23 +421,23 @@ function decimals() public view virtual override returns (uint8) {
 * **블록체인과 연동하는 것을 중점으로 볼것**
 * **deploy하면 또 배포할필요 없고, 얻은 contractAddress만 잘 사용하면 됨.**
 
-![image-20220721163416604](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721163416604.png)
+![image-20220721163416604](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721163416604.png)
 
-![image-20220721163444426](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721163444426.png)
-
-
-
-![image-20220721163516089](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721163516089.png)
+![image-20220721163444426](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721163444426.png)
 
 
 
-![image-20220721165853197](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721165853197.png)
+![image-20220721163516089](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721163516089.png)
+
+
+
+![image-20220721165853197](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721165853197.png)
 
 <br>
 
 토큰 가져올때는 Remix에서 
 
-* ![image-20220721163825228](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721163825228.png)  이부분 복사해서 토큰 가져온것
+* ![image-20220721163825228](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721163825228.png)  이부분 복사해서 토큰 가져온것
 
 
 <br>
@@ -449,9 +449,9 @@ function decimals() public view virtual override returns (uint8) {
 * **아래는 deploy 결과**
 * 토큰을 가져오는거지 계정가져오는게 아님. 햇갈리지 말것. 계정은 그냥 있는 계정 활용
 
-![image-20220721165348514](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721165348514.png)
+![image-20220721165348514](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721165348514.png)
 
-![image-20220721170011381](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721170011381.png)
+![image-20220721170011381](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721170011381.png)
 
 <br>
 
@@ -462,9 +462,9 @@ function decimals() public view virtual override returns (uint8) {
 * form 작성해서 send할땐 보내고 싶은곳 주소 적으면 된다.
   * public key를 보내면 됨. 여기선 Account1 계정의 주소를 보냈음
 
-![image-20220721170255009](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721170255009.png)
+![image-20220721170255009](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721170255009.png)
 
-![image-20220721173019614](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721173019614.png)
+![image-20220721173019614](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721173019614.png)
 
 <br>
 
@@ -474,11 +474,11 @@ function decimals() public view virtual override returns (uint8) {
 
 * form에 주소만 적어주면 된다. 이또한 Public Key를 작성한다.
 
-![image-20220721170305933](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721170305933.png)
+![image-20220721170305933](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721170305933.png)
 
 
 
-![image-20220721173139042](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721173139042.png)
+![image-20220721173139042](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721173139042.png)
 
 <br><br>
 
@@ -490,7 +490,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ### 전체적인 구조
 
-![image-20220721131028901](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131028901.png)
+![image-20220721131028901](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721131028901.png)
 
 <br>
 
@@ -498,7 +498,7 @@ function decimals() public view virtual override returns (uint8) {
 
 * UI 자리를 Metamask가 하는것이다.
 
-![image-20220721131115910](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131115910.png)
+![image-20220721131115910](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721131115910.png)
 
 <br>
 
@@ -507,7 +507,7 @@ function decimals() public view virtual override returns (uint8) {
 * Metamask같은 UI 동작을 할 수 있는게 없기 때문에 Remix(IDE)를 사용
 * 그렇지만, Ganache는 Metamask처럼 지갑 기능은 들고있다.
 
-![image-20220721131944608](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131944608.png)
+![image-20220721131944608](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721131944608.png)
 
 <br>
 
@@ -517,6 +517,5 @@ function decimals() public view virtual override returns (uint8) {
 * Metamask로 전송 가능했고 Remix ID로도 전송 가능했다는 점 기억  
   Ganache는 전송하는 UI도 없고 불가했다는 점 기억
 
-![image-20220721131911463](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131911463.png)
-
+![image-20220721131911463](/images/2022-07-21-4일차-스마트컨트랙트 활용/image-20220721131911463.png)
 
