--- a/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
+++ b/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
@@ -47,19 +47,7 @@ typora-root-url: ../../..
 
 
 ```html
-<!--  
-<div class="archive">
-    {% unless page.header.overlay_color or page.header.overlay_image %}
-      {% if page.title != nil %}
-        <h3 class="archive__subtitle">{{ page.title }}</h3>
-      {% endif %}
-      {% if page.title == nil %}
-        <h3 class="archive__subtitle__default">{{ "Recent Posts" }}</h3>
-      {% endif %}
-    {% endunless %}
-    {{ content }}
-  </div> 
--->
+안녕하세요~
 ```
 
 <br>
